--- a/client/src/components/custom/AuctionCard/styles.module.scss
+++ b/client/src/components/custom/AuctionCard/styles.module.scss
@@ -44,7 +44,7 @@
 }
 
 .settled {
-  opacity: 0.5;
+  opacity: 0.15;
 }
 
 .deleteBtn {
